[package]
name = "rustpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "^0.14.0"
noise = { version = "0.8.2" }
rayon = "*"
futures-lite = "1.12.0"
rapier3d = { version = "0.16.1", features = [ "simd-stable" ] }